# TensorFlow_FKI_MSU

./: .gitignore  README.md  main.py  pyproject.toml
src/car-detector/: README.md  main.py  merge_and_visualize.py  pyproject.toml  split_image.py  train_cifar10.py  visualize_backproject.py
src/car-detector-dataset/: README.md  infer_tiles.py  infer_tiles_custom.py  main.py  merge_and_visualize.py  pyproject.toml  split_image.py  test.py  train_cifar10.py  train_custom.py  visualize_backproject.py
src/car-detector-dataset/models/: custom_dataset_cnn.classes.txt  custom_dataset_cnn.keras
src/car-detector/models/: cifar10_cnn.keras
src/detect_license_plate_number/: main.py  minivan_model.py  pyproject.toml
